// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MeetingContainer /> snapshot should match snapshot 1`] = `
<MeetingContainer>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <CardStatus>
              <div
                className="md-card-status-wrapper"
              />
            </CardStatus>
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    type="header-primary"
                  >
                    <h3
                      className="md-text-wrapper"
                      data-type="header-primary"
                    />
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-round={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with avatar supplied 1`] = `
<MeetingContainer
  avatar={
    <Avatar>
      BR
    </Avatar>
  }
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <CardStatus>
              <div
                className="md-card-status-wrapper"
              />
            </CardStatus>
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-avatar"
              >
                <Avatar
                  size={32}
                >
                  <div
                    className="md-avatar-wrapper"
                    data-color="default"
                    data-size={32}
                  >
                    <span />
                  </div>
                </Avatar>
              </div>
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    type="header-primary"
                  >
                    <h3
                      className="md-text-wrapper"
                      data-type="header-primary"
                    />
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-round={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with children supplied 1`] = `
<MeetingContainer>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <CardStatus>
              <div
                className="md-card-status-wrapper"
              />
            </CardStatus>
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    type="header-primary"
                  >
                    <h3
                      className="md-text-wrapper"
                      data-type="header-primary"
                    >
                      Test Child
                    </h3>
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-round={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with circle action buttons supplied 1`] = `
<MeetingContainer
  actionButtons={
    Array [
      <ButtonCircle
        color="join"
        ghost={true}
        outline={true}
        size={28}
      >
        T
      </ButtonCircle>,
      <ButtonCircle
        color="join"
        ghost={true}
        outline={true}
        size={28}
      >
        T
      </ButtonCircle>,
      <ButtonCircle
        color="join"
        ghost={true}
        outline={true}
        size={28}
      >
        T
      </ButtonCircle>,
    ]
  }
  meetingTitle="TestMeeting"
  scheduleInfoFirst="10:00am-11:00am"
  scheduleInfoSecond="Mon, Jan 1, 2023"
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <CardStatus>
              <div
                className="md-card-status-wrapper"
              />
            </CardStatus>
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    type="header-primary"
                  >
                    <h3
                      className="md-text-wrapper"
                      data-type="header-primary"
                    >
                      TestMeeting
                    </h3>
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    >
                      10:00am-11:00am
                    </small>
                  </Text>
                  <DividerDot>
                    <div
                      className="md-divider-dot-wrapper"
                    />
                  </DividerDot>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    >
                      Mon, Jan 1, 2023
                    </small>
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-round={false}
                    data-spaced={true}
                  >
                    <ButtonCircle
                      color="join"
                      ghost={true}
                      key="0"
                      outline={true}
                      size={28}
                    >
                      <ButtonSimple
                        aria-pressed={false}
                        className="md-button-circle-wrapper"
                        data-color="join"
                        data-disabled={false}
                        data-ghost={true}
                        data-multiple-children={false}
                        data-outline={true}
                        data-selected={false}
                        data-size={28}
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        type="button"
                      >
                        <FocusRing>
                          <FocusRing
                            focusClass="md-focus-ring-wrapper children"
                            focusRingClass="md-focus-ring-wrapper children"
                          >
                            <button
                              aria-pressed={false}
                              className="md-button-circle-wrapper md-button-simple-wrapper"
                              data-color="join"
                              data-disabled={false}
                              data-ghost={true}
                              data-multiple-children={false}
                              data-outline={true}
                              data-selected={false}
                              data-size={28}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onDragStart={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onMouseUp={[Function]}
                              onTouchCancel={[Function]}
                              onTouchEnd={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              type="button"
                            >
                              <span>
                                T
                              </span>
                            </button>
                          </FocusRing>
                        </FocusRing>
                      </ButtonSimple>
                    </ButtonCircle>
                    <ButtonCircle
                      color="join"
                      ghost={true}
                      key="1"
                      outline={true}
                      size={28}
                    >
                      <ButtonSimple
                        aria-pressed={false}
                        className="md-button-circle-wrapper"
                        data-color="join"
                        data-disabled={false}
                        data-ghost={true}
                        data-multiple-children={false}
                        data-outline={true}
                        data-selected={false}
                        data-size={28}
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        type="button"
                      >
                        <FocusRing>
                          <FocusRing
                            focusClass="md-focus-ring-wrapper children"
                            focusRingClass="md-focus-ring-wrapper children"
                          >
                            <button
                              aria-pressed={false}
                              className="md-button-circle-wrapper md-button-simple-wrapper"
                              data-color="join"
                              data-disabled={false}
                              data-ghost={true}
                              data-multiple-children={false}
                              data-outline={true}
                              data-selected={false}
                              data-size={28}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onDragStart={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onMouseUp={[Function]}
                              onTouchCancel={[Function]}
                              onTouchEnd={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              type="button"
                            >
                              <span>
                                T
                              </span>
                            </button>
                          </FocusRing>
                        </FocusRing>
                      </ButtonSimple>
                    </ButtonCircle>
                    <ButtonCircle
                      color="join"
                      ghost={true}
                      key="2"
                      outline={true}
                      size={28}
                    >
                      <ButtonSimple
                        aria-pressed={false}
                        className="md-button-circle-wrapper"
                        data-color="join"
                        data-disabled={false}
                        data-ghost={true}
                        data-multiple-children={false}
                        data-outline={true}
                        data-selected={false}
                        data-size={28}
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        type="button"
                      >
                        <FocusRing>
                          <FocusRing
                            focusClass="md-focus-ring-wrapper children"
                            focusRingClass="md-focus-ring-wrapper children"
                          >
                            <button
                              aria-pressed={false}
                              className="md-button-circle-wrapper md-button-simple-wrapper"
                              data-color="join"
                              data-disabled={false}
                              data-ghost={true}
                              data-multiple-children={false}
                              data-outline={true}
                              data-selected={false}
                              data-size={28}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onDragStart={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onMouseUp={[Function]}
                              onTouchCancel={[Function]}
                              onTouchEnd={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              type="button"
                            >
                              <span>
                                T
                              </span>
                            </button>
                          </FocusRing>
                        </FocusRing>
                      </ButtonSimple>
                    </ButtonCircle>
                  </div>
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with className 1`] = `
<MeetingContainer
  className="example-class"
>
  <Card
    className="example-class md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="example-class md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="example-class md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <CardStatus>
              <div
                className="md-card-status-wrapper"
              />
            </CardStatus>
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    type="header-primary"
                  >
                    <h3
                      className="md-text-wrapper"
                      data-type="header-primary"
                    />
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-round={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with disable supplied 1`] = `
<MeetingContainer
  actionButtons={
    Array [
      <ButtonPill
        color="join"
        ghost={true}
        outline={true}
        size={28}
      >
        <Text>
          Message
        </Text>
      </ButtonPill>,
      <ButtonPill
        color="join"
        size={28}
      >
        <Text>
          Join
        </Text>
      </ButtonPill>,
    ]
  }
  disabled={true}
  meetingTitle="Test Meeting Title"
  spaceLink={
    <ButtonHyperlink>
      Example Link
    </ButtonHyperlink>
  }
  tags={
    Array [
      <Tag>
        Messages
      </Tag>,
      <Tag>
        Recording
      </Tag>,
    ]
  }
>
  <Card
    className="md-meeting-container-wrapper"
    disabled={true}
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
      disabled={true}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <CardStatus>
              <div
                className="md-card-status-wrapper"
              />
            </CardStatus>
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    type="header-primary"
                  >
                    <h3
                      className="md-text-wrapper"
                      data-type="header-primary"
                    >
                      Test Meeting Title
                    </h3>
                  </Text>
                  <DividerDot>
                    <div
                      className="md-divider-dot-wrapper"
                    />
                  </DividerDot>
                  <ButtonHyperlink
                    className="md-meeting-container-space-link"
                  >
                    <FocusRing>
                      <FocusRing
                        focusClass="md-focus-ring-wrapper children"
                        focusRingClass="md-focus-ring-wrapper children"
                      >
                        <a
                          className="md-button-hyperlink-wrapper md-meeting-container-space-link"
                          data-disabled={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onDragStart={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onKeyUp={[Function]}
                          onMouseDown={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          onMouseUp={[Function]}
                          onTouchCancel={[Function]}
                          onTouchEnd={[Function]}
                          onTouchMove={[Function]}
                          onTouchStart={[Function]}
                          role="button"
                          tabIndex={0}
                        >
                          Example Link
                        </a>
                      </FocusRing>
                    </FocusRing>
                  </ButtonHyperlink>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                </div>
                <div
                  className="md-meeting-container-tags"
                >
                  <Tag
                    key="0"
                  >
                    <ButtonSimple
                      className="md-tag-wrapper"
                      data-color="primary"
                      data-format="normal"
                      isDisabled={false}
                    >
                      <FocusRing
                        disabled={false}
                      >
                        <FocusRing
                          disabled={false}
                          focusClass="md-focus-ring-wrapper children"
                          focusRingClass="md-focus-ring-wrapper children"
                        >
                          <button
                            className="md-tag-wrapper md-button-simple-wrapper"
                            data-color="primary"
                            data-format="normal"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onDragStart={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchCancel={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            type="button"
                          >
                            <Text
                              type="subheader-secondary"
                            >
                              <h3
                                className="md-text-wrapper"
                                data-type="subheader-secondary"
                              >
                                Messages
                              </h3>
                            </Text>
                          </button>
                        </FocusRing>
                      </FocusRing>
                    </ButtonSimple>
                  </Tag>
                  <Tag
                    key="1"
                  >
                    <ButtonSimple
                      className="md-tag-wrapper"
                      data-color="primary"
                      data-format="normal"
                      isDisabled={false}
                    >
                      <FocusRing
                        disabled={false}
                      >
                        <FocusRing
                          disabled={false}
                          focusClass="md-focus-ring-wrapper children"
                          focusRingClass="md-focus-ring-wrapper children"
                        >
                          <button
                            className="md-tag-wrapper md-button-simple-wrapper"
                            data-color="primary"
                            data-format="normal"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onDragStart={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchCancel={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            type="button"
                          >
                            <Text
                              type="subheader-secondary"
                            >
                              <h3
                                className="md-text-wrapper"
                                data-type="subheader-secondary"
                              >
                                Recording
                              </h3>
                            </Text>
                          </button>
                        </FocusRing>
                      </FocusRing>
                    </ButtonSimple>
                  </Tag>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
                data-anchor="top"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-round={false}
                    data-spaced={true}
                  >
                    <ButtonPill
                      color="join"
                      ghost={true}
                      key="0"
                      outline={true}
                      size={28}
                    >
                      <ButtonSimple
                        className="md-button-pill-wrapper"
                        data-color="join"
                        data-disabled={false}
                        data-ghost={true}
                        data-grown={false}
                        data-outline={true}
                        data-size={28}
                        data-solid={false}
                      >
                        <FocusRing>
                          <FocusRing
                            focusClass="md-focus-ring-wrapper children"
                            focusRingClass="md-focus-ring-wrapper children"
                          >
                            <button
                              className="md-button-pill-wrapper md-button-simple-wrapper"
                              data-color="join"
                              data-disabled={false}
                              data-ghost={true}
                              data-grown={false}
                              data-outline={true}
                              data-size={28}
                              data-solid={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onDragStart={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onMouseUp={[Function]}
                              onTouchCancel={[Function]}
                              onTouchEnd={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              type="button"
                            >
                              <Text>
                                <p
                                  className="md-text-wrapper"
                                  data-type="body-primary"
                                >
                                  Message
                                </p>
                              </Text>
                            </button>
                          </FocusRing>
                        </FocusRing>
                      </ButtonSimple>
                    </ButtonPill>
                    <ButtonPill
                      color="join"
                      key="1"
                      size={28}
                    >
                      <ButtonSimple
                        className="md-button-pill-wrapper"
                        data-color="join"
                        data-disabled={false}
                        data-ghost={false}
                        data-grown={false}
                        data-outline={false}
                        data-size={28}
                        data-solid={false}
                      >
                        <FocusRing>
                          <FocusRing
                            focusClass="md-focus-ring-wrapper children"
                            focusRingClass="md-focus-ring-wrapper children"
                          >
                            <button
                              className="md-button-pill-wrapper md-button-simple-wrapper"
                              data-color="join"
                              data-disabled={false}
                              data-ghost={false}
                              data-grown={false}
                              data-outline={false}
                              data-size={28}
                              data-solid={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onDragStart={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onMouseUp={[Function]}
                              onTouchCancel={[Function]}
                              onTouchEnd={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              type="button"
                            >
                              <Text>
                                <p
                                  className="md-text-wrapper"
                                  data-type="body-primary"
                                >
                                  Join
                                </p>
                              </Text>
                            </button>
                          </FocusRing>
                        </FocusRing>
                      </ButtonSimple>
                    </ButtonPill>
                  </div>
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with id 1`] = `
<MeetingContainer
  id="example-id"
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
    id="example-id"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
      id="example-id"
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            id="example-id"
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <CardStatus>
              <div
                className="md-card-status-wrapper"
              />
            </CardStatus>
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    type="header-primary"
                  >
                    <h3
                      className="md-text-wrapper"
                      data-type="header-primary"
                    />
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-round={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with pill action buttons supplied 1`] = `
<MeetingContainer
  actionButtons={
    Array [
      <ButtonPill
        color="join"
        ghost={true}
        outline={true}
        size={28}
      >
        <Text>
          Message
        </Text>
      </ButtonPill>,
      <ButtonPill
        color="join"
        size={28}
      >
        <Text>
          Join
        </Text>
      </ButtonPill>,
    ]
  }
  meetingTitle="TestMeeting"
  scheduleInfoFirst="10:00am-11:00am"
  scheduleInfoSecond="Mon, Jan 1, 2023"
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <CardStatus>
              <div
                className="md-card-status-wrapper"
              />
            </CardStatus>
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    type="header-primary"
                  >
                    <h3
                      className="md-text-wrapper"
                      data-type="header-primary"
                    >
                      TestMeeting
                    </h3>
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    >
                      10:00am-11:00am
                    </small>
                  </Text>
                  <DividerDot>
                    <div
                      className="md-divider-dot-wrapper"
                    />
                  </DividerDot>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    >
                      Mon, Jan 1, 2023
                    </small>
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-round={false}
                    data-spaced={true}
                  >
                    <ButtonPill
                      color="join"
                      ghost={true}
                      key="0"
                      outline={true}
                      size={28}
                    >
                      <ButtonSimple
                        className="md-button-pill-wrapper"
                        data-color="join"
                        data-disabled={false}
                        data-ghost={true}
                        data-grown={false}
                        data-outline={true}
                        data-size={28}
                        data-solid={false}
                      >
                        <FocusRing>
                          <FocusRing
                            focusClass="md-focus-ring-wrapper children"
                            focusRingClass="md-focus-ring-wrapper children"
                          >
                            <button
                              className="md-button-pill-wrapper md-button-simple-wrapper"
                              data-color="join"
                              data-disabled={false}
                              data-ghost={true}
                              data-grown={false}
                              data-outline={true}
                              data-size={28}
                              data-solid={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onDragStart={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onMouseUp={[Function]}
                              onTouchCancel={[Function]}
                              onTouchEnd={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              type="button"
                            >
                              <Text>
                                <p
                                  className="md-text-wrapper"
                                  data-type="body-primary"
                                >
                                  Message
                                </p>
                              </Text>
                            </button>
                          </FocusRing>
                        </FocusRing>
                      </ButtonSimple>
                    </ButtonPill>
                    <ButtonPill
                      color="join"
                      key="1"
                      size={28}
                    >
                      <ButtonSimple
                        className="md-button-pill-wrapper"
                        data-color="join"
                        data-disabled={false}
                        data-ghost={false}
                        data-grown={false}
                        data-outline={false}
                        data-size={28}
                        data-solid={false}
                      >
                        <FocusRing>
                          <FocusRing
                            focusClass="md-focus-ring-wrapper children"
                            focusRingClass="md-focus-ring-wrapper children"
                          >
                            <button
                              className="md-button-pill-wrapper md-button-simple-wrapper"
                              data-color="join"
                              data-disabled={false}
                              data-ghost={false}
                              data-grown={false}
                              data-outline={false}
                              data-size={28}
                              data-solid={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onDragStart={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onMouseUp={[Function]}
                              onTouchCancel={[Function]}
                              onTouchEnd={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              type="button"
                            >
                              <Text>
                                <p
                                  className="md-text-wrapper"
                                  data-type="body-primary"
                                >
                                  Join
                                </p>
                              </Text>
                            </button>
                          </FocusRing>
                        </FocusRing>
                      </ButtonSimple>
                    </ButtonPill>
                  </div>
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with scheduleInfoFirst supplied 1`] = `
<MeetingContainer
  scheduleInfoFirst="10:00am-11:00am"
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <CardStatus>
              <div
                className="md-card-status-wrapper"
              />
            </CardStatus>
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    type="header-primary"
                  >
                    <h3
                      className="md-text-wrapper"
                      data-type="header-primary"
                    />
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    >
                      10:00am-11:00am
                    </small>
                  </Text>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-round={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with scheduleInfoFirstColor supplied 1`] = `
<MeetingContainer
  scheduleInfoFirst="10:00am-11:00am"
  scheduleInfoFirstColor="success"
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <CardStatus>
              <div
                className="md-card-status-wrapper"
              />
            </CardStatus>
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    type="header-primary"
                  >
                    <h3
                      className="md-text-wrapper"
                      data-type="header-primary"
                    />
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="success"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="success"
                      data-type="body-secondary"
                    >
                      10:00am-11:00am
                    </small>
                  </Text>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-round={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with scheduleInfoSecond supplied 1`] = `
<MeetingContainer
  scheduleInfoSecond="10:00am-11:00am"
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <CardStatus>
              <div
                className="md-card-status-wrapper"
              />
            </CardStatus>
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    type="header-primary"
                  >
                    <h3
                      className="md-text-wrapper"
                      data-type="header-primary"
                    />
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                  <DividerDot>
                    <div
                      className="md-divider-dot-wrapper"
                    />
                  </DividerDot>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    >
                      10:00am-11:00am
                    </small>
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-round={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with scheduleInfoSecondColor supplied 1`] = `
<MeetingContainer
  scheduleInfoSecond="10:00am-11:00am"
  scheduleInfoSecondColor="success"
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <CardStatus>
              <div
                className="md-card-status-wrapper"
              />
            </CardStatus>
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    type="header-primary"
                  >
                    <h3
                      className="md-text-wrapper"
                      data-type="header-primary"
                    />
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                  <DividerDot>
                    <div
                      className="md-divider-dot-wrapper"
                    />
                  </DividerDot>
                  <Text
                    data-color="success"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="success"
                      data-type="body-secondary"
                    >
                      10:00am-11:00am
                    </small>
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-round={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with spacelink supplied 1`] = `
<MeetingContainer
  meetingTitle="TestMeeting"
  scheduleInfoFirst="10:00am-11:00am"
  scheduleInfoSecond="Mon, Jan 1, 2023"
  spaceLink={
    <ButtonHyperlink>
      Example Link
    </ButtonHyperlink>
  }
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <CardStatus>
              <div
                className="md-card-status-wrapper"
              />
            </CardStatus>
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    type="header-primary"
                  >
                    <h3
                      className="md-text-wrapper"
                      data-type="header-primary"
                    >
                      TestMeeting
                    </h3>
                  </Text>
                  <DividerDot>
                    <div
                      className="md-divider-dot-wrapper"
                    />
                  </DividerDot>
                  <ButtonHyperlink
                    className="md-meeting-container-space-link"
                  >
                    <FocusRing>
                      <FocusRing
                        focusClass="md-focus-ring-wrapper children"
                        focusRingClass="md-focus-ring-wrapper children"
                      >
                        <a
                          className="md-button-hyperlink-wrapper md-meeting-container-space-link"
                          data-disabled={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onDragStart={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onKeyUp={[Function]}
                          onMouseDown={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          onMouseUp={[Function]}
                          onTouchCancel={[Function]}
                          onTouchEnd={[Function]}
                          onTouchMove={[Function]}
                          onTouchStart={[Function]}
                          role="button"
                          tabIndex={0}
                        >
                          Example Link
                        </a>
                      </FocusRing>
                    </FocusRing>
                  </ButtonHyperlink>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    >
                      10:00am-11:00am
                    </small>
                  </Text>
                  <DividerDot>
                    <div
                      className="md-divider-dot-wrapper"
                    />
                  </DividerDot>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    >
                      Mon, Jan 1, 2023
                    </small>
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-round={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with style 1`] = `
<MeetingContainer
  style={
    Object {
      "color": "pink",
    }
  }
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
      style={
        Object {
          "color": "pink",
        }
      }
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "color": "pink",
              }
            }
            type="button"
          >
            <CardStatus>
              <div
                className="md-card-status-wrapper"
              />
            </CardStatus>
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    type="header-primary"
                  >
                    <h3
                      className="md-text-wrapper"
                      data-type="header-primary"
                    />
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-round={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with tags supplied 1`] = `
<MeetingContainer
  tags={
    Array [
      <Tag>
        Messages
      </Tag>,
      <Tag>
        Recording
      </Tag>,
    ]
  }
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <CardStatus>
              <div
                className="md-card-status-wrapper"
              />
            </CardStatus>
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    type="header-primary"
                  >
                    <h3
                      className="md-text-wrapper"
                      data-type="header-primary"
                    />
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                  <Text
                    data-color="secondary"
                    type="body-secondary"
                  >
                    <small
                      className="md-text-wrapper"
                      data-color="secondary"
                      data-type="body-secondary"
                    />
                  </Text>
                </div>
                <div
                  className="md-meeting-container-tags"
                >
                  <Tag
                    key="0"
                  >
                    <ButtonSimple
                      className="md-tag-wrapper"
                      data-color="primary"
                      data-format="normal"
                      isDisabled={false}
                    >
                      <FocusRing
                        disabled={false}
                      >
                        <FocusRing
                          disabled={false}
                          focusClass="md-focus-ring-wrapper children"
                          focusRingClass="md-focus-ring-wrapper children"
                        >
                          <button
                            className="md-tag-wrapper md-button-simple-wrapper"
                            data-color="primary"
                            data-format="normal"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onDragStart={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchCancel={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            type="button"
                          >
                            <Text
                              type="subheader-secondary"
                            >
                              <h3
                                className="md-text-wrapper"
                                data-type="subheader-secondary"
                              >
                                Messages
                              </h3>
                            </Text>
                          </button>
                        </FocusRing>
                      </FocusRing>
                    </ButtonSimple>
                  </Tag>
                  <Tag
                    key="1"
                  >
                    <ButtonSimple
                      className="md-tag-wrapper"
                      data-color="primary"
                      data-format="normal"
                      isDisabled={false}
                    >
                      <FocusRing
                        disabled={false}
                      >
                        <FocusRing
                          disabled={false}
                          focusClass="md-focus-ring-wrapper children"
                          focusRingClass="md-focus-ring-wrapper children"
                        >
                          <button
                            className="md-tag-wrapper md-button-simple-wrapper"
                            data-color="primary"
                            data-format="normal"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onDragStart={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchCancel={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            type="button"
                          >
                            <Text
                              type="subheader-secondary"
                            >
                              <h3
                                className="md-text-wrapper"
                                data-type="subheader-secondary"
                              >
                                Recording
                              </h3>
                            </Text>
                          </button>
                        </FocusRing>
                      </FocusRing>
                    </ButtonSimple>
                  </Tag>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
                data-anchor="top"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-round={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;
